VPAT-21306 fix contrast on Java code highlights

--- a/assets/scss/light-theme.scss
+++ b/assets/scss/light-theme.scss
@@ -465,7 +465,7 @@ div.aside div.aside-content {
 /* KeywordPseudo */ .chroma .kp { color: #268BD2 !important }
 /* KeywordReserved */ .chroma .kr { color: #268BD2 !important }
 /* KeywordType */ .chroma .kt { color: #268BD2 !important }
-/* Name */ .chroma .n { color: #2AA198 !important }
+/* Name */ .chroma .n { color: #058075 !important }
 /* NameAttribute */ .chroma .na { color: #607500 !important }
 /* NameBuiltin .chroma .nb {  } */
 /* NameBuiltinPseudo .chroma .bp {  } */
@@ -477,7 +477,7 @@ div.aside div.aside-content {
 /* NameFunction */ .chroma .nf { color: #607500 !important }
 /* NameFunctionMagic .chroma .fm {  } */
 /* NameLabel .chroma .nl {  } */
-/* NameNamespace */ .chroma .nn { color: #2AA198 !important }
+/* NameNamespace */ .chroma .nn { color: #058075 !important }
 /* NameOther */ .chroma .nx { color: #607500 !important }
 /* NameProperty .chroma .py {  } */
 /* NameTag */ .chroma .nt { color: #268BD2 !important }
